Fix original names being too tall
for countries with potentially tall scripts like Cambodia or Myanmar

--- a/static/styles.css
+++ b/static/styles.css
@@ -44,7 +44,8 @@ body {
 }
 
 .subheader {
-  font-size: 16pt; 
+  font-size: 12pt; 
+  line-height: 1.2;
 }
 
 .chinese {
